services/observability/clusters/feather-core/alloy-receiver/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: alloy-receiver
spec:
  parentRefs:
    - name: eg
      namespace: envoy
      sectionName: https
  hostnames:
    - otel.apps.onelite.feather
  rules:
    - matches:
        - {}
      backendRefs:
        - name: alloy-receiver
          port: 4317
